# etanetas-coverage

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yml  etanetas_adresu_sistema_TZ_v2.md  main.py  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0001_production_baseline.py  23d4663af70b_add_flat_no_to_addresses.py  2608c0c3d364_add_type_abbr_corpus_no.py  2b10a2f6d3a1_add_etl_state_table.py  4bfd94c676db_add_api_keys_key_prefix_index.py  50b84530c27a_initial_schema.py  59bce5ed616f_add_address_type_to_addresses.py  6ef10fd18c20_add_audit_log_address_code_index.py  75bf647fc397_backfill_api_keys_key_prefix.py  9757d93296ad_add_audit_log_entity_time_index.py  a72a12d9c895_technologies_add_deleted_at_drop_active.py  ad155c551da4_add_service_zones_custom_name.py  b4bb0915d15b_add_locality_name_k.py  c76434df3e06_add_service_zones_source_column.py  cc7f18b34d4a_add_service_zones_deleted_at_cascade_.py  cd787da37d47_add_address_offerings_tech_status_index.py  f9a906019f47_add_lms_username_to_users.py
app/: audit.py  auth.py  auto_zones.py  cli.py  config.py  database.py  errors.py  gis_import.py  limiter.py  logging_config.py  main.py  middleware.py  telemetry.py  time.py
app/api/: pagination.py  responses.py
app/db/: address_labels.py  audit_helpers.py  filter_builder.py
app/models/: __init__.py  address.py  admin.py  etl_state.py  service.py  technology.py
app/schemas/: admin.py  public.py
docs/: README.md  frontend-plan.md  lms-plugin-ai-prompt.md  lms-plugin-spec.md
etl/: config.py  notifications.py  state_db.py
etl/downloaders/: rc_address_points_client.py  rc_csv_client.py  rc_geojson_client.py  rc_zip_fallback.py  spinta_client.py
etl/loaders/: geometry_load.py  incremental_load.py  upsert_load.py
etl/tasks/: full_import.py  monthly_full_resync.py  nightly_sync.py
etl/transformers/: address_mapper.py
etl/utils/: download.py  retry.py  time.py  uuid_resolver.py
tests/: conftest.py
tests/api/: conftest.py  test_admin_crud.py  test_admin_users.py  test_audit.py  test_audit_keys.py  test_auth.py  test_auth_perf.py  test_auto_zone_triggers.py  test_bulk.py  test_errors.py  test_health.py  test_map_validation.py  test_public_addresses.py  test_stats.py  test_stats_hygiene.py  test_zone_coverage_deleted.py  test_zone_gaps.py  test_zones_source.py
viewer/: .env.example  README.md  pyproject.toml
viewer/viewer/: db.py  main.py  routes.py
viewer/viewer/static/: lms.html  map.html
web/: biome.json  package-lock.json  package.json  playwright.config.ts
(+70 files in other folders)
