[project]
name = "etanetas-coverage"
version = "0.1.0"
description = "Etanetas ISP address & service availability API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "geoalchemy2>=0.15.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "bcrypt>=4.1.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.25.1",
    "httpx>=0.28.1",
    "ijson>=3.5.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "slowapi>=0.1.9",
    "pydantic[email]>=2.13.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a running database",
    "live: tests that require network access to Spinta/RC",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.alembic]
script_location = "%(here)s/alembic"
prepend_sys_path = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez (forbid naive datetime)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # FastAPI idiom: Query()/Depends() in function default args
    "UP046", # Generic class type params — cosmetic Python 3.12 syntax
    "UP047", # Generic function type params — cosmetic Python 3.12 syntax
]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E402", "F401"]
